--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ h1 {
 
 footer {
 	font-size: 14px;
-	color: #515151;
+	background-color: red;
 	width: 100%;
 	bottom: 0px;
 	padding: 20px;
@@ -26,20 +26,20 @@ footer {
 	float: none;
 	list-style-type: none;
 	overflow: hidden;
-	background-color: rgb(36, 36, 36);
+	background-color: rgb(0, 0, 0);
 }  
 
 li a {
     display: block;
-    color: lightblue;
+    color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
   
 li a:hover:not(.active), a:focus:not(.active), .active {
-	color: rgb(36, 36, 36);
-    background-color: lightblue;
+	color: rgb(0, 0, 0);
+    background-color: yellow;
 }
 
 p {
